--- a/archiver.conf
+++ b/archiver.conf
@@ -6,6 +6,7 @@ ConsumerKey: vSfPqwPbDpKSzOvcpIs3dg
 ConsumerSecret: fLvAmi0ATSgh8tHBTpo43VoFt2CivrVy5ayowDgg2g
 AccessToken: 18546532-TsMqawKJHZt4C7Y3OUFBxdd6XyaeV7ShveDAokfki
 AccessTokenSecret: r7yZOhjNc2PnGK3vkzBK48Va2Wsfe6sHRJEYtunGBxY
+YahooAppId: 5IRT1P4o
 
 [Database]
 Host: localhost
@@ -14,5 +15,5 @@ Password: 0shishaB
 Database: firehose_archive
 
 [Archive Settings]
-mode: sample #Retrive data from Twitter's sample streaming API. Currently only this mode is supported.
+Mode: sample #Retrive data from Twitter's sample streaming API. Currently only this mode is supported.
 
